# openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: Blizzard API
-  version: 0.4.1
+  version: 0.4.2
   description: OpenAPI specification for Blizzard API
 servers:
   - url: https://{region}.api.blizzard.com
@@ -736,6 +736,8 @@ components:
           type: integer
         active_title:
           $ref: '#/components/schemas/ActiveTitleDTO'
+        name_search:
+          type: string
       required:
         - id
         - name
@@ -745,7 +747,6 @@ components:
         - character_class
         - active_spec
         - realm
-        - guild
         - level
         - experience
         - achievement_points
